--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Write once, run anywhere.
+title: SHOYA I/O.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://shoya.io" # the base hostname & protocol for your site
 permalink: /blog/:title/
