--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ markdown: kramdown
 popular: ["Paletta", "zebra", "cookpad_internship", "hatena_intern", "internet_black_market", "long_shadow"]
 plugins: []
 exclude:
+  - README.md
   - Gemfile
   - Gemfile.lock
   - vendor
