--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,41 @@ exclude:
   - Gemfile.lock
   - vendor
   - Rakefile
+research_projects:
+  - title: "HyperMind"
+    image_url: "/assets/img/project_hypermind.jpg"
+    project_url: "https://uedu.uni-kl.de/arbeitsfelder/arbeitsfeld-01/hypermind/"
+    description: "Intelligent digital textbook"
+  - title: "iQL-Lab"
+    image_url: "/assets/img/project_iql.jpg"
+    project_url: "http://iql-lab.de/index.php"
+    description: "Immersive Quantified Learning Lab"
+  - title: "Eyewear Computing"
+    image_url: "/assets/img/project_eyewear.jpg"
+    project_url: "/research/eyewear/"
+    description: "Cognitive activity recognition in the wild"
+fun_projects:
+  - title: "mosa.fm"
+    image_url: "/assets/img/project_mosafm.png"
+    project_url: "https://mosa.fm"
+    description: "Podcast with software developers"
+  - title: "photo.shoya.io"
+    image_url: "/assets/img/project_photo.jpg"
+    project_url: "http://photo.shoya.io"
+    description: "Gallery of pictures taken by Shoya"
+  - title: "Shin' on kei (心温計)"
+    image_url: "/assets/img/project_shinonkei.jpg"
+    project_url: "/"
+    description: "Estimating mental states by a user’s activity log derived from wearable devices"
+  - title: "MEMELogger"
+    image_url: "/assets/img/project_memelogger.png"
+    project_url: "https://memelogger.shoya.io"
+    description: "Sensor logging applications for JINS MEME"
+  - title: "SPAM MUSEUM"
+    image_url: "/assets/img/project_spammuseum.png"
+    project_url: "http://meiwaku.me"
+    description: "Collecting funny spam e-mails in Japan"
+  - title: "Paletta"
+    image_url: "/assets/img/project_paletta.png"
+    project_url: "http://paletta.mrk1869.com"
+    description: "Tool to explore colors"
